<resources>
    <string name="app_name">OnlineEducation</string>
    <string name="home">首页</string>
    <string name="study">学习</string>
    <string name="lesson">课程</string>
    <string name="my">我的</string>

    <string name="hot_playing">正在热播</string>
    <string name="hot_lesson">热门课程</string>
 <string name="study_text">文字</string>
    <string name="study_pic">图片</string>
    <string name="study_video">视频</string>
    <string name="study_movie">影视</string>
    <string name="mylive">我的直播</string>
    <string name="live">直播</string>
    <string name="appointment">预约</string>
    <string name="openlesson">公开课</string>
    <string name="mylesson">我的课程</string>
    <string name="lessonsort">课程分类</string>
    <string name="symbol">音标</string>
    <string name="childeng">幼儿英语</string>
    <string name="primaryeng">小学英语</string>
    <string name="middleeng">中学英语</string>
    <string name="universityeng">大学英语</string>
    <string name="IELTS">雅思</string>
    <string name="TOEFL">托福</string>
    <string name="business">商务英语</string>
    <string name="living">直播中</string>
    <string name="appiont">预约</string>
    <string name="disappoint">取消预约</string>
    <string name="prelive">即将直播</string>
    <string name="myappointment">我的预约</string>
    <string name="english">英语</string>
    <string name="chinese">中文</string>
    <string name="my_wallet">我的钱包</string>
    <string name="coupon">优惠券</string>
    <string name="applytoteacher">申请成为老师</string>
    <string name="mystudy">我的学习记录</string>
    <string name="myteach">我的授课记录</string>
    <string name="share">分享</string>
    <string name="setting">设置</string>
    <string name="hint">请输入邮箱、手机号</string>
    <string name="inputpass">请输入密码</string>
    <string name="login">登录</string>
    <string name="forgetpass">忘记密码</string>
    <string name="signup">用户注册</string>
   <string name="telnum">手机号</string>
   <string name="inputtel">请输入手机号</string>
   <string name="code">验证码</string>
   <string name="getcode">获取验证码</string>
   <string name="inputcode">请输入验证码</string>
   <string name="password">密码</string>
   <string name="inputpassword">输入6-20位密码</string>
   <string name="signup2">注册</string>
   <string name="mailsign">邮箱注册</string>
   <string name="phonesign">手机注册</string>
   <string name="mail">登录邮箱</string>
   <string name="checkpassword">确认密码</string>
   <string name="inputmail">请输入登录邮箱</string>
   <string name="mailcode">已发送至邮箱</string>
   <string name="sure">确定</string>
   <string name="inputnewpassword">输入新的6-20位密码</string>
   <string name="phonefind">手机找回</string>
   <string name="mailfind">邮箱找回</string>
   <string name="checkmail">验证邮箱</string>
   <string name="mailtip">请填写验证码,已发送至相应的邮箱</string>
    <string name="topay">费用支付</string>
    <string name="select_coupon">选择优惠券</string>
    <string name="paysure">确认支付</string>
    <string name="select_pay">选择支付方式</string>
    <string name="ali">支付宝</string>
    <string name="thanks">谢谢观看</string>
    <string name="star">点一下评分:</string>
    <string name="submit">提交</string>
    <string name="uploadhead">上传头像</string>
    <string name="name">姓名</string>
    <string name="inputname">请填入姓名</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="lanuage">语种</string>
    <string name="education">学历</string>
    <string name="experience">教学经验</string>
    <string name="introduct">简介</string>
    <string name="introductinfo">介绍自己～</string>
    <string name="university">本科</string>
    <string name="collage">专科</string>
    <string name="Master">硕士</string>
    <string name="Doctor">博士</string>
    <string name="apply">申请成为老师</string>
    <string name="select_lang">选择学习语种</string>
    <string name="clear">清除缓存</string>
    <string name="update">版本更新</string>
    <string name="about">关于我们</string>
    <string name="advice">意见与反馈</string>
    <string name="contract">联系我们</string>
    <string name="loginout">退出账号</string>
    <string name="stars">点一下评分:</string>
    <string name="appteacher">预约老师</string>
    <string name="lessonarange">课程安排</string>
    <string name="lessondeatil">课程详情</string>
    <string name="teacherdetail">教师详情</string>
    <string name="head">头像</string>
    <string name="username">用户名</string>
    <string name="mlanguage">专长语种</string>
    <string name="minfo">个人信息</string>
    <string name="long_text">请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱请填写验证码,已发送至相应的邮箱</string><string name="prtip">手机号不能为空</string>
    <string name="ptip2">密码不能为空</string>
    <string name="rsucc">注册成功</string>
    <string name="tip">手机号小于11位</string>
    <string name="tip2">密码不符合格式</string>
    <string name="success">成功</string>
    <string name="tip3">邮箱地址不能为空</string>
    <string name="cancel">取消</string>
</resources>
